# rcore-learning

./: .gitignore  .nvim.lua  README.md  rust-toolchain.toml
notes/ch0/: program-a.c  program-b.c
notes/ch1/: README.md
notes/ch2/: README.md
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config.toml
os/src/: batch.rs  console.rs  entry.asm  lang_items.rs  link_app.S  linker.ld  logger.rs  main.rs  sbi.rs  sync.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/trap/: context.rs  mod.rs  trap.S
practice/ch0/: README.md  divzero.c
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: console.rs  lang_items.rs  lib.rs  linker-qemu.ld  logger.rs  syscall.rs
