[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need legacy feature, because the Serial port interface is come from legacy interfaces.
sbi-rt = { version = "0.0", features = ["legacy"] }
log = "0.4"
